Fixed typo, thanks to Jack Wilber for the find

--- a/preso.html
+++ b/preso.html
@@ -337,7 +337,7 @@ db.readTransaction(function(tx) {
 			<h2>IndexedDB - Creation is Tricky</h2>
 			<ul>
 				<li>You can only change structure by changing version</li>
-				<li>If a user had version 1 and your on version 3, you have to maintain the code to update between them</li>
+				<li>If a user had version 1 and you're on version 3, you have to maintain the code to update between them</li>
 				<li>So yeah, get it right the first time</li>
 				<li>And oh yeah - Chrome doesn't work right yet</li>
 			</ul>
